--- a/src/App.css
+++ b/src/App.css
@@ -67,8 +67,15 @@ body {
   height: 24px;
   margin-right: 8px;
   margin-top: -1px;
-  margin-bottom: -5px;
+  margin-bottom: -6px;
 }
+
+.gift-price-value {
+  vertical-align: middle;
+  position: relative;
+  top: -2px;
+}
+
 
 .spin-gift-block {
   background: rgba(255, 255, 255, 0.04);
@@ -173,8 +180,8 @@ body {
 .ton-icon-reward {
   width: 18px;
   height: 18px;
-  margin-top: -5px;
-  margin-right: 2px;
+  margin-top: -4px;
+  margin-right: 4px;
   vertical-align: middle;
 }
 
